<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context="com.tokang.customer.menu.Booking">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:padding="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="75dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_layout"
                    android:padding="10dp"
                    android:elevation="2dp"
                    android:layout_marginTop="5dp"
                    tools:targetApi="lollipop">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:fontFamily="@font/latoregular"
                        android:textColor="@color/oil"
                        android:text="@string/booking_time"
                        android:textSize="16sp"
                        android:gravity="center_vertical"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@id/edit_time"
                        />
                    <Button
                        android:id="@+id/edit_time"
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:text="@string/edit_label"
                        android:fontFamily="@font/latoregular"
                        android:textColor="@drawable/button_rounded_text_color"
                        android:background="@drawable/button_rounded"
                        android:layout_alignParentEnd="true"
                        />
                    <RelativeLayout
                        android:id="@+id/edit_time_layout"
                        android:layout_below="@id/edit_time"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/light_gray"
                        android:layout_marginTop="5dp"
                        android:padding="5dp"
                        >
                        <ImageView
                            android:id="@+id/date_icon"
                            android:layout_width="50dp"
                            android:layout_height="70dp"
                            android:padding="10dp"
                            app:srcCompat="@drawable/ic_date_range_black_24dp"
                            android:tint="@color/flatui_midnight_blue"
                            tools:ignore="ContentDescription" />
                        <TextView
                            android:id="@+id/order_time"
                            android:layout_width="fill_parent"
                            android:layout_height="30dp"
                            android:fontFamily="@font/latoregular"
                            android:textColor="@color/oil"
                            android:text="@string/booking_time"
                            android:textSize="16sp"
                            android:layout_toRightOf="@+id/date_icon"
                            />
                        <TextView
                            android:id="@+id/order_date"
                            android:layout_width="fill_parent"
                            android:layout_height="30dp"
                            android:fontFamily="@font/latoregular"
                            android:textColor="@color/oil"
                            android:text="@string/booking_time"
                            android:textSize="16sp"
                            android:layout_toRightOf="@+id/date_icon"
                            android:layout_below="@+id/order_time"
                            />
                    </RelativeLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/order_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_layout"
                    android:padding="10dp"
                    android:elevation="2dp"
                    android:layout_marginTop="5dp"
                    tools:targetApi="lollipop">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:fontFamily="@font/latoregular"
                        android:textColor="@color/oil"
                        android:text="@string/order_location_label"
                        android:textSize="16sp"
                        android:gravity="center_vertical"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@id/edit_location"
                        />
                    <Button
                        android:id="@+id/edit_location"
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:text="@string/edit_label"
                        android:fontFamily="@font/latoregular"
                        android:textColor="@drawable/button_rounded_text_color"
                        android:background="@drawable/button_rounded"
                        android:layout_alignParentEnd="true"
                        />
                    <RelativeLayout
                        android:layout_below="@id/edit_location"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/light_gray"
                        android:layout_marginTop="5dp"
                        android:padding="5dp"
                        >
                        <ImageView
                            android:id="@+id/location_icon"
                            android:layout_width="50dp"
                            android:layout_height="70dp"
                            android:padding="10dp"
                            app:srcCompat="@drawable/ic_location_on_black_24dp"
                            android:tint="@color/flatui_midnight_blue"
                            tools:ignore="ContentDescription" />
                        <TextView
                            android:id="@+id/map_location"
                            android:layout_width="fill_parent"
                            android:layout_height="40dp"
                            android:fontFamily="@font/latoregular"
                            android:textColor="@color/oil"
                            android:text="@string/order_location_label"
                            android:textSize="16sp"
                            android:layout_toRightOf="@+id/location_icon"
                            />
                        <ImageView
                            android:id="@+id/location_detail_icon"
                            android:layout_width="14dp"
                            android:layout_height="20dp"
                            app:srcCompat="@drawable/ic_mode_edit_black_24dp"
                            android:tint="@color/flatui_midnight_blue"
                            tools:ignore="ContentDescription"
                            android:layout_below="@+id/map_location"
                            android:layout_toRightOf="@+id/location_icon"
                            android:layout_alignParentBottom="true"
                            />
                        <EditText
                            android:id="@+id/input_location_detail"
                            android:layout_width="fill_parent"
                            android:layout_height="20dp"
                            android:fontFamily="@font/latoregular"
                            android:textColor="@color/oil"
                            android:textCursorDrawable="@null"
                            android:hint="@string/add_descriptions"
                            android:textSize="14sp"
                            android:layout_toRightOf="@+id/location_detail_icon"
                            android:layout_below="@+id/map_location"
                            android:background="@android:color/transparent"
                            android:layout_alignParentBottom="true"
                            />
                    </RelativeLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_layout"
                    android:padding="10dp"
                    android:elevation="2dp"
                    android:layout_marginTop="5dp"
                    tools:targetApi="lollipop">
                    <TextView
                        android:id="@+id/label_payment"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:fontFamily="@font/latoregular"
                        android:textColor="@color/oil"
                        android:text="@string/payment_method"
                        android:textSize="16sp"
                        android:gravity="center_vertical"
                        android:layout_alignParentStart="true"
                        />
                    <RelativeLayout
                        android:layout_below="@id/label_payment"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/light_gray"
                        android:layout_marginTop="5dp"
                        android:padding="16dp"
                        >
                        <TextView
                            android:id="@+id/cash_label"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:fontFamily="@font/latoregular"
                            android:textColor="@color/oil"
                            android:text="@string/cash_label"
                            android:textSize="20sp"
                            android:gravity="center_vertical"
                            />
                        <RadioGroup
                            android:id="@+id/payment_radio_group"
                            android:layout_width="fill_parent"
                            android:layout_height="60dp"
                            android:layout_toEndOf="@+id/cash_label"
                            android:gravity="right"
                            >
                            <RadioButton
                                android:id="@+id/cash_option"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:buttonTint="@color/oil"
                                />
                        </RadioGroup>
                    </RelativeLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_layout"
                    android:padding="10dp"
                    android:elevation="2dp"
                    android:layout_marginTop="5dp"
                    tools:targetApi="lollipop">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RelativeLayout
                            android:id="@+id/fee_layout"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/light_gray"
                            android:layout_marginTop="5dp"
                            android:padding="16dp"
                            >
                            <TextView
                                android:id="@+id/consultation_fee_label"
                                android:layout_width="wrap_content"
                                android:layout_height="60dp"
                                android:fontFamily="@font/latoregular"
                                android:textColor="@color/oil"
                                android:text="@string/consultation_fee"
                                android:textSize="16sp"
                                android:gravity="center_vertical"
                                android:layout_alignParentStart="true"
                                android:layout_toStartOf="@+id/consultation_fee_price"
                                />
                            <TextView
                                android:id="@+id/consultation_fee_price"
                                android:layout_width="wrap_content"
                                android:layout_height="60dp"
                                android:fontFamily="@font/latoregular"
                                android:textColor="@color/oil"
                                android:text="@string/dummy_price"
                                android:textSize="16sp"
                                android:gravity="center_vertical"
                                android:layout_alignParentEnd="true"
                                />
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/light_gray"
                            android:layout_marginTop="5dp"
                            android:padding="16dp"
                            >
                            <TextView
                                android:id="@+id/total_payment_label"
                                android:layout_width="wrap_content"
                                android:layout_height="60dp"
                                android:fontFamily="@font/latoregular"
                                android:textColor="@color/oil"
                                android:text="@string/total_payment"
                                android:textStyle="bold"
                                android:textSize="16sp"
                                android:gravity="center_vertical"
                                android:layout_alignParentStart="true"
                                android:layout_toStartOf="@+id/total_payment_price"
                                />
                            <TextView
                                android:id="@+id/total_payment_price"
                                android:layout_width="wrap_content"
                                android:layout_height="60dp"
                                android:fontFamily="@font/latoregular"
                                android:textColor="@color/oil"
                                android:text="@string/dummy_price"
                                android:textStyle="bold"
                                android:textSize="16sp"
                                android:gravity="center_vertical"
                                android:layout_alignParentEnd="true"
                                />
                        </RelativeLayout>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/white"
            android:paddingLeft="19dp"
            android:paddingRight="19dp"
            android:gravity="center"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_primary"
                android:text="@string/order_now"
                android:textColor="@color/white"
                android:fontFamily="@font/latoregular"
                android:textSize="20sp"
                />
        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
